--- a/framework-v2.0/framework/templates/header.html
+++ b/framework-v2.0/framework/templates/header.html
@@ -17,10 +17,9 @@
                 Preprocess
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#datasetModal">Update Results Datasets</a></li>
+                <li><a class="dropdown-item btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#datasetModal">Update Results Datasets</a></li>
                 <div class="divider dropdown-divider"></div>
-                <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#rankModal">Update Rank</a></li>
-                
+                <li><a class="dropdown-item btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#rankModal">Update Rank</a></li>
               </ul>
             </div>
           </li> 
