--- a/framework-v2.0/framework/templates/download.html
+++ b/framework-v2.0/framework/templates/download.html
@@ -22,7 +22,7 @@
                     </div>
                    
                     <div class="table-responsive" style="margin-top: 20px;">
-                        <table class="table table-dark table-striped">
+                        <table class="table table-dark table-striped align-middle">
                             <thead>
                             <tr>
                                 <th>Serial No.</th>
@@ -42,7 +42,7 @@
                                 <td>{{i.date}}</td>
                                 <td>{{i.model}}</td>
                                 <td>{{i.filenames}}</td>
-                                <td><button type="button"  class="btn btn-outline-success my-3"><a href="{{i.link}}">Download</a></button></td>
+                                <td><button type="button"  class="btn btn-outline-success"><a href="{{i.link}}">Download</a></button></td>
                             </tr>
                             {% endfor %}
                             {% endif %}
