--- a/framework-v2.0/framework/templates/modal_d.html
+++ b/framework-v2.0/framework/templates/modal_d.html
@@ -15,7 +15,7 @@
             <p>Do you want to update Results dataset?</p>
         </div>
         <div class="modal-footer">
-          <a class="btn btn-primary" href="http://csprediction-env.eba-pvvpzi4d.eu-north-1.elasticbeanstalk.com/update" role="button">Yes</a>
+          <a class="btn btn-primary" href="/dataset" role="button">Yes</a>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
         </div>
       </div>
