--- a/framework-v2.0/framework/templates/update_rank.html
+++ b/framework-v2.0/framework/templates/update_rank.html
@@ -12,7 +12,7 @@
             <div class="card-body">
                 
                 <h2 align="Center" style="color:black;">
-                  It Might Take around 20 minutes..!
+                It Might Take Few minutes..!
                 </h2>
                 <div class="container">
         
@@ -27,7 +27,7 @@
                         progressNumber++;
                         progressBar.css('width', progressNumber + '%');
                         progressBar.att('aria-valuenow', progressNumber);
-                    }, 5000);
+                    }, 10000);
         
                 </script>
                 
