--- a/framework-v2.0/framework/templates/download.html
+++ b/framework-v2.0/framework/templates/download.html
@@ -22,7 +22,7 @@
                     </div>
                    
                     <div class="table-responsive" style="margin-top: 20px;">
-                        <table class="table table-dark table-striped align-middle">
+                        <table class="table table-dark table-striped table-hover align-middle">
                             <thead>
                             <tr>
                                 <th>Serial No.</th>
