--- a/framework-v2.0/framework/templates/modal_r.html
+++ b/framework-v2.0/framework/templates/modal_r.html
@@ -15,7 +15,7 @@
             <p>Do you want to update Rank?</p>
         </div>
         <div class="modal-footer">
-          <a class="btn btn-primary" href="http://csprediction-env.eba-pvvpzi4d.eu-north-1.elasticbeanstalk.com/rank" role="button">Yes</a>
+          <a class="btn btn-primary" href="/update_rank" role="button">Yes</a>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
         </div>
       </div>
