add odds and prediction upload

--- a/framework-v2.0/framework/templates/header.html
+++ b/framework-v2.0/framework/templates/header.html
@@ -14,12 +14,16 @@
            <li class="nav-item">
             <div class="dropdown mx-1">
               <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                Preprocess
+                Process
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#datasetModal">Update Results Datasets</a></li>
                 <div class="divider dropdown-divider"></div>
                 <li><a class="dropdown-item btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#rankModal">Update Rank</a></li>
+                <div class="divider dropdown-divider"></div>
+                <li><a class="dropdown-item btn btn-outline-primary" href="http://csprediction-env.eba-pvvpzi4d.eu-north-1.elasticbeanstalk.com/upload_odds">Odds Upload</a></li>
+                <div class="divider dropdown-divider"></div>
+                <li><a class="dropdown-item btn btn-outline-primary" href="https://gazellebet.com/">Gazellebet</a></li>
               </ul>
             </div>
           </li> 
